<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_calculate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/txt_calcDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:text="@string/cal_calcDesc"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rdo_male"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/male"
                app:buttonTint="@color/colorPrimaryLight" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rdo_female"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/female"
                app:buttonTint="@color/colorPrimaryLight" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:textColorHint="@color/colorPrimaryLight"
            app:boxStrokeColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_years"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/years_15_60"
                android:inputType="number"
                android:padding="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/height"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:textColorHint="@color/colorPrimaryLight"
            app:boxStrokeColor="@color/colorPrimaryLight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_feet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/feet_4_7"
                android:inputType="number"
                android:padding="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:textColorHint="@color/colorPrimaryLight"
            app:boxStrokeColor="@color/colorPrimaryLight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_inches"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/inches_1_11"
                android:inputType="number"
                android:padding="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_pound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weight"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:textColorHint="@color/colorPrimaryLight"
            app:boxStrokeColor="@color/colorPrimaryLight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_pounds"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/pounds_50_250"
                android:inputType="number"
                android:padding="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_Activity"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:autofillHints=""
            android:background="@drawable/edit_text_round_bg_outline"
            android:drawableEnd="@drawable/ic_expand_arrow"
            android:focusable="false"
            android:hint="@string/select"
            android:inputType="none"
            android:paddingHorizontal="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="@color/colorPrimaryLight"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_cal_calculate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/calculate" />


</LinearLayout>