<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.proton.easycooking.AboutAppActivity">

    <include
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/tv_appname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pyidaungsu"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_appversion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pyidaungsu"
                android:text="@string/app_version"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_appabout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/pyidaungsu"
                android:text="@string/app_about"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_appcontact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/pyidaungsu"
                android:text="@string/app_contact"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>