<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.proton.easycooking.RecipesDetailActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/recipe_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/simple_img1"
                    app:layout_collapseMode="parallax" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/drawer_top_gradient"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/recipe_Name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/app_name"
                            android:textColor="@color/white"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="18dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="12dp"
                            android:text="10 Minutes"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:visibility="gone" />

                    </LinearLayout>
                </RelativeLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="60dp"
                app:cardCornerRadius="3dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3dp"
                        android:padding="8dp"
                        android:text="@string/Method"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="18sp"
                        android:visibility="visible" />

                    <RelativeLayout
                        android:id="@+id/layout_adview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/recipe_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/app_about"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="18sp"
                        android:visibility="gone" />

                    <WebView
                        android:id="@+id/web_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorOnSecondary"
                        android:visibility="visible" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/img_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            android:src="@drawable/ic_favorite_outline_white"
            app:backgroundTint="@color/colorPrimaryLight"
            app:borderWidth="0dp"
            app:fabSize="normal"
            app:layout_anchor="@id/appbar"
            app:layout_anchorGravity="bottom|right|end"
            app:tint="@color/white" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_ad_detail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

    </androidx.cardview.widget.CardView>

</RelativeLayout>